# hyperdoc2vec

./: .gitignore  README.md  hd2v.py  main.py  pyproject.toml  util.py
data/: citations.tsv
data/paper/: 2020.lrec-1.225.txt  D07-1074.txt  D10-1058.txt  D11-1072.txt  E06-1002.txt  K16-1025.txt  K16-1026.txt  L08-1291.txt  N15-1184.txt  N16-2002.txt  P07-2045.txt  P13-2006.txt  P14-5010.txt  Q18-1028.txt  W06-1613.txt
